--- a/roi-contacts-frontend/app.json
+++ b/roi-contacts-frontend/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "name": "ui",
-    "slug": "ui",
+    "name": "roi-contacts-frontend",
+    "slug": "roi-contacts-frontend",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
