--- a/roi-contacts-frontend/package.json
+++ b/roi-contacts-frontend/package.json
@@ -21,7 +21,8 @@
     "react-native-web": "~0.18.10",
     "@expo/webpack-config": "^18.0.1",
     "expo-screen-orientation": "~5.1.1",
-    "expo-linking": "~4.0.1"
+    "expo-linking": "~4.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
